# wagtail-indymeet

./: .dockerignore  .env.docker  .env.example  .env.template  .env.template.docker  .env.template.local  .env.template.production  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .template.env  Dockerfile  LICENSE  Procfile  README.md  app.json  conftest.py  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  supervisord.conf  template.env  tox.ini  verify_pr_stats.py
.claude/: CLAUDE.md  settings.json  shared.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/test_settings/: docker-compose_devcontainer.json  gui_example_devcontainer.json  old_Dockerfile  old_docker-compose.yml
.github/: dependabot.yml
.github/workflows/: develop_djangonaut_space.yml  develop_end_to_end_tests.yml  main_djangonaut-space.yml  main_end_to_end_tests.yml  production.yml  staging.yml  tests.yml  zizmor.yml
.tox/py310-dj41/: .tox-info.json
.tox/py310-dj42/: .tox-info.json
accounts/: admin.py  apps.py  factories.py  fields.py  forms.py  lookups.py  models.py  receivers.py  tasks.py  tests.py  tokens.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_bio_customuser_bio_image_and_more.py  0002_speaker_alter_customuser_member_status_memberlist_and_more.py  0003_remove_customuser_bio_remove_customuser_bio_image_and_more.py  0004_alter_userprofile_member_role.py  0005_userprofile_email_confirmed.py  0006_userprofile_receiving_event_updates.py  0007_alter_userprofile_user.py  0008_userprofile_receiving_program_updates.py  0009_useravailability.py  0010_alter_customuser_managers.py  0010_customuser_github_username.py  0011_userprofile_github_username.py  0012_customuser_accounts_customuser_email_unq.py  0013_alter_userprofile_receiving_event_updates_and_more.py  0014_remove_userprofile_member_role_and_more.py  0015_userprofile_interested_in.py  0016_userprofile_interested_in_validator.py  0017_buttondownaccount.py
accounts/tests/: test_admin.py  (+19 more)
docs/: deployment.md  post-map-changes.md
home/: admin.py  apps.py  availability.py  blocks.py  constants.py  context_processors.py  dataclasses.py  email.py  factories.py  filters.py  forms.py  icalendar_utils.py  managers.py  models.py  preview_email.py  receivers.py  signals.py  team_allocation.py  urls.py  utils.py  validators.py  views.py  widgets.py
indymeet/: admin.py  settings.py  urls.py  wsgi.py
load_tests/: README.md  basic_plan.js  test_application.js  test_blog.js  test_session.js  test_survey.js
nginx.conf.d/: README  djangonaut-space-block-invalid-hosts.conf  djangonaut-space-static.conf  staging-block-invalid-hosts.conf  staging-noindex.conf  staging-static.conf
requirements/: requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
scripts/: local.sh  postbuild.sh  release.sh  startup.sh
search/: views.py
static/: staticfiles.json
talks/: apps.py  models.py  serializers.py  urls.py  views.py
tests/: __init__.py  conftest.py  test_admin.py  test_complete_session_onboarding_flow.py  test_end_to_end.py
theme/: apps.py
(+442 files in other folders)
