[project]
name = "djangonaut_space"
version = "1.0.0"
requires-python = ">=3.11"
urls = {homepage = "https://github.com/djangonaut-space/wagtail-indymeet"}
dependencies = [
    "Django==5.2.*",
    "wagtail",
    "django-storages",
    "psycopg[binary]",
    "django-anymail",
    "six",
    "django-recaptcha>=4",
    "python-dotenv",
    "puput",
    "urllib3",
    "django-extensions",
    "django-debug-toolbar",
    "typing-extensions",
    "distlib",  # Required for django-tailwind
    "django-tailwind",
    "sentry-sdk[django]",
    "supervisor",
    "django-widget-tweaks",
    "dj-database-url",
    "gunicorn",
    "django-filter>=25.2",
    "django-tasks",
]

[project.optional-dependencies]
test = [
    "freezegun",
    "playwright",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-mock",
    "pytest-playwright",
    "factory_boy",
    "unittest_parametrize",
]
dev = [
    "pre-commit",
    "django-tailwind[reload]",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "indymeet.settings.test"
addopts = "--reuse-db -m 'not playwright'"
markers = [
    "playwright: mark test that requires playwright",
]
filterwarnings = [
    "ignore:The FORMS_URLFIELD_ASSUME_HTTPS transitional setting is deprecated:django.utils.deprecation.RemovedInDjango60Warning",
    "ignore:The usage of `WidgetWithScript` hook is deprecated:wagtail.utils.deprecation.RemovedInWagtail70Warning",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
    "accounts",
    "home",
    "indymeet",
]

[tool.coverage.paths]
source = [
    "accounts",
    "home",
    "indymeet",
]

[tool.coverage.report]
show_missing = true
