[metadata]
name = djangonaut_space
version = 1.0.0
url = https://github.com/adamchainz/django-mysql


[coverage:run]
branch = True
parallel = True
source =
    accounts
    home
    indymeet

[coverage:paths]
source =
    accounts
    home
    indymeet

[coverage:report]
show_missing = True

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    */__init__.py:F401
