[metadata]
name = djangonaut_space
version = 1.0.0
url = https://github.com/djangonaut-space/wagtail-indymeet


[tool:pytest]
base_url = http://localhost:8000
DJANGO_SETTINGS_MODULE = indymeet.settings.test
addopts = --reuse-db -m "not playwright"
markers =
  playwright: mark test that requires playwright


[coverage:run]
branch = True
parallel = True
source =
    accounts
    home
    indymeet

[coverage:paths]
source =
    accounts
    home
    indymeet

[coverage:report]
show_missing = True
